# roulette-analyzer

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Makefile  README.md  analyze.py  api.py  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
core/: __init__.py  bias.py  ev.py  patterns.py  predictability_engine.py  report.py  stats.py  strategies.py  stream_generators.py  transitions.py  wheel.py
docs/: ARCHITECTURE.md  HONEST_MATH.md  INGESTION_PATTERNS.md  ROADMAP.md  SKILLS_AND_MCPS.md
examples/: sample_biased_spins.csv  sample_unbiased_spins.csv
n8n/: workflow_roulette_collector.json  workflow_roulette_simulator.json
scripts/: quickstart.sh
supabase/migrations/: 0001_initial.sql
tests/: test_api.py  test_bias_ev_strategies.py  test_patterns.py  test_predictability_engine.py  test_stats.py  test_stats_crossvalidation.py  test_transitions.py  test_wheel.py
