[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roulette-analyzer"
version = "0.1.0"
description = "Honest statistical analysis of roulette: bias detection, RNG audit, strategy simulation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "thiago" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "statsmodels>=0.14",
]
dashboard = [
    "streamlit>=1.30",
    "httpx>=0.27",
]
nist = [
    "nistrng>=1.2",
]
anomaly = [
    "aeon>=0.8",
]

[project.scripts]
roulette-analyze = "analyze:main"

[tool.setuptools]
packages = ["core"]
py-modules = ["analyze", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
